--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletişim - Mehmet Demir</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("hE7XnxjI_ZW__juZK"); // EmailJS public key'nizi buraya ekleyin
+        })();
+    </script>
 </head>
 <body>
     <header>
@@ -25,13 +31,13 @@
     <section id="contact">
         <div class="container">
             <h2 style="text-align: center;">İletişim</h2>
-            <form action="contact_form.php" method="POST">
-                <label for="name">Ad:</label>
+            <form id="contact-form">
+                <label for="name">Ad Soyad:</label>
                 <input type="text" id="name" name="name" required>
-                <label for="email">E-posta:</label>
+                <label for="email">E-Posta:</label>
                 <input type="email" id="email" name="email" required>
                 <label for="message">Mesaj:</label>
-                <textarea id="message" name="message" required></textarea>
+                <textarea id="message" name="message" maxlength="500" required></textarea>
                 <input type="submit" value="Gönder">
             </form>
         </div>
@@ -40,5 +46,18 @@
     <footer>
         <p>Mehmet Demir &copy; 2024</p>
     </footer>
+
+    <script type="text/javascript">
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+
+            emailjs.sendForm('service_8pxt8kd', 'template_1plxaqp', this)
+                .then(function() {
+                    alert('Mesaj başarıyla gönderildi!');
+                }, function(error) {
+                    alert('Mesaj gönderilirken bir hata oluştu: ' + JSON.stringify(error));
+                });
+        });
+    </script>
 </body>
 </html>
